# Async.cpp

./: .gitignore  CMakeLists.txt  README.md
cmakeModules/: DllInstaller.cmake  FindGTestSrc.cmake  SetBuildProperties.cmake  SetVSTargetProperties.cmake  UseGtest.cmake
src/: CMakeLists.txt
src/async/: Async.h  AsyncResult.cpp  AsyncResult.h  AsyncTask.cpp  AsyncTask.h  CMakeLists.txt  Parallel.cpp  Parallel.h  ParallelFor.cpp  ParallelFor.h  ParallelForEach.cpp  ParallelForEach.h  ParallelTask.cpp  ParallelTask.h  Series.cpp  Series.h  SeriesTask.cpp  SeriesTask.h
src/async/test/: TestAsync.cpp
src/async_cpp/: CMakeLists.txt
src/async_cpp/async/: Async.h  AsyncResult.cpp  AsyncResult.h  CMakeLists.txt  Filter.cpp  Filter.h  IAsyncResult.cpp  IAsyncResult.h  IParallelTask.cpp  IParallelTask.h  ISeriesTask.cpp  ISeriesTask.h  Map.cpp  Map.h  OpResult.cpp  OpResult.h  Parallel.cpp  Parallel.h  ParallelCollectTask.cpp  ParallelCollectTask.h  ParallelFor.cpp  ParallelFor.h  ParallelForEach.cpp  ParallelForEach.h  ParallelTask.cpp  ParallelTask.h  ParallelTerminalTask.cpp  ParallelTerminalTask.h  Platform.h  Series.cpp  Series.h  SeriesCollectTask.cpp  SeriesCollectTask.h  SeriesTask.cpp  SeriesTask.h  SeriesTerminalTask.cpp  SeriesTerminalTask.h  Unique.h
src/async_cpp/async/detail/: IAsyncTask.cpp  IAsyncTask.h  IParallelTask.cpp  IParallelTask.h  ISeriesTask.cpp  ISeriesTask.h  ParallelCollectTask.cpp  ParallelCollectTask.h  ParallelTask.cpp  ParallelTask.h  ParallelTerminalTask.cpp  ParallelTerminalTask.h  ReadyVisitor.cpp  ReadyVisitor.h  SeriesCollectTask.cpp  SeriesCollectTask.h  SeriesTask.cpp  SeriesTask.h  SeriesTerminalTask.cpp  SeriesTerminalTask.h  ValueVisitor.cpp  ValueVisitor.h
src/async_cpp/async/test/: CMakeLists.txt  TestAsioOverload.cpp  TestAsync.cpp  TestFilter.cpp  TestMap.cpp  TestOverload.cpp  TestParallel.cpp  TestParallelFor.cpp  TestParallelForEach.cpp  TestSeries.cpp  TestUnique.cpp
src/async_cpp/tasks/: AsioManager.cpp  AsioManager.h  BasicTask.cpp  BasicTask.h  CMakeLists.txt  IManager.cpp  IManager.h  Manager.cpp  Manager.h  Platform.h  Task.cpp  Task.h  Tasks.h  Worker.cpp  Worker.h
src/async_cpp/tasks/test/: CMakeLists.txt  TestAsioManager.cpp  TestTasks.cpp  TestWorkers.cpp
src/workers/: BasicTask.cpp  BasicTask.h  CMakeLists.txt  IManager.cpp  IManager.h  Manager.cpp  Manager.h  Platform.h  Task.cpp  Task.h  TaskQueueManager.cpp  TaskQueueManager.h  Worker.cpp  Worker.h
src/workers/test/: CMakeLists.txt  TestRunner.cpp  TestWorkers.cpp
